--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -20,7 +20,7 @@
 #
 server {
         listen 80 default_server;
-	server_name %SERVER_NAME%;;
+	server_name %DOMAIN%;
         root /var/www/current;
 
         # Add index.php to the list if you are using PHP
