--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -21,7 +21,7 @@
 server {
         listen 80 default_server;
 	server_name %DOMAIN%;
-        root /var/www/current;
+        root /var/www/html/current;
 
         # Add index.php to the list if you are using PHP
         index index.html index.htm index.nginx-debian.html index.php;
