--- a/.github/workflows/ssh-deploy.yml
+++ b/.github/workflows/ssh-deploy.yml
@@ -40,14 +40,14 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            echo ${{ env.PROJECT_DIR }}
             cd /var/www/html
             rm -rf ${{ env.PROJECT_DIR }} 
-            git clone ${{ github.server_url }}/${{ github.repository }}.git ${{ env.PROJECT_DIR }}            
+            git clone ${{ github.server_url }}/${{ github.repository }}.git ${{ env.PROJECT_DIR }}
+            sh ./deploy.sh ${{ vars.DEPLOY_HOST }} ${{ secrets.MYSQL_HOST }} ${{ secrets.MYSQL_USER }} ${{ secrets.MYSQL_PASSWORD }} ${{ secrets.MYSQL_DATABASE }}
             rm -rf /var/www/html/${{ env.PROJECT_DIR }}/var/log
             mkdir -p /var/www/html/${{ env.PROJECT_DIR }}/var/log
             cd /var/www/html/${{ env.PROJECT_DIR }}
-            ln -s /var/www/html/shared/log /var/www/html/${{ env.PROJECT_DIR }}/var/log 
-            ( [ ! -d /var/www/html/current ] || mv -Tf /var/www/html/current /var/www/html/previous )
+            ln -s /var/www/html/shared/log /var/www/html/${{ env.PROJECT_DIR }}/var/log
+            mv -Tf /var/www/html/current /var/www/html/previous
             ln -s /var/www/html/${{ env.PROJECT_DIR }} /var/www/html/current
-            sh ./deploy.sh ${{ vars.DEPLOY_HOST }} ${{ secrets.MYSQL_HOST }} ${{ secrets.MYSQL_USER }} ${{ secrets.MYSQL_PASSWORD }} ${{ secrets.MYSQL_DATABASE }}
+            
