--- a/.github/workflows/ssh-deploy.yml
+++ b/.github/workflows/ssh-deploy.yml
@@ -43,6 +43,7 @@ jobs:
             cd /var/www/html
             rm -rf ${{ env.PROJECT_DIR }} 
             git clone ${{ github.server_url }}/${{ github.repository }}.git ${{ env.PROJECT_DIR }}
+            cd /var/www/html/${{ env.PROJECT_DIR }}
             sh ./deploy.sh ${{ vars.DEPLOY_HOST }} ${{ secrets.MYSQL_HOST }} ${{ secrets.MYSQL_USER }} ${{ secrets.MYSQL_PASSWORD }} ${{ secrets.MYSQL_DATABASE }}
             rm -rf /var/www/html/${{ env.PROJECT_DIR }}/var/log
             mkdir -p /var/www/html/${{ env.PROJECT_DIR }}/var/log
